--- a/demo.html
+++ b/demo.html
@@ -10,9 +10,6 @@
 </head>
 <body unresolved>
 
-  <p>An `fd-polymer-rest-service` looks like this:</p>
-
-  <fd-polymer-rest-service></fd-polymer-rest-service>
-
+  <p>An `fd-polymer-rest-service` doesn't looks in any way..</p>
 </body>
 </html>
