Fixed version correspondence and added some more documantation

--- a/fd-polymer-rest-service.html
+++ b/fd-polymer-rest-service.html
@@ -62,6 +62,13 @@ Element providing a service for interfacing Freedomotic's Rest APIs.
        */
     fdtype:'environments',
 
+      /**
+       * The 'fditems' attribute collects data received as a response from a API call.
+       * Usually you link this attribute to a declared variable, using the "{{ }}" notation
+       * 
+       * @attribute fditems
+       * @type array
+       */
     fditems: [],
     
       /**
