--- a/fd-polymer-rest-service.html
+++ b/fd-polymer-rest-service.html
@@ -19,9 +19,9 @@ Element providing a service for interfacing Freedomotic's Rest APIs.
 @status beta
 @homepage http://freedomotic.github.io/fd-polymer-rest-service
 -->
-<polymer-element name="fd-rest-service" attributes="fditems fdtype toast method auto params headers body contentType apiUrl credentialRequired">
+<polymer-element name="fd-rest-service" attributes="fditems fdtype toast method auto params headers body contentType apiUrl">
   <template>
-   <fd-api-settings apiUrl="{{apiUrl}}" credentialRequired="{{credentialRequired}}"></fd-api-settings> 
+   <fd-api-settings apiUrl="{{apiUrl}}"></fd-api-settings> 
     <core-ajax id="ajax" 
       auto="{{auto}}"
       on-core-error="{{errorHandler}}"
@@ -33,7 +33,7 @@ Element providing a service for interfacing Freedomotic's Rest APIs.
       params="{{params}}"
       body="{{body}}"
       contentType="{{contentType}}"
-      withCredentials="{{credentialRequired}}">
+      withCredentials="true">
     </core-ajax>
 
   </template>
@@ -73,14 +73,6 @@ Element providing a service for interfacing Freedomotic's Rest APIs.
        */
     
     auto: true,
-      /**
-       * The 'credentialRequired' attribute tells whether the API call requires authentication 
-       *
-       * @attribute credentialRequired
-       * @type boolean
-       */
-    
-    credentialRequired: undefined,
 
       /**
        * The 'apiUrl' attribute represents the URL through which the service can reach the API 
